--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "webpack": "webpack",
     "prestart": "npm run webpack",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "heroku-postbuild": "webpack -p"
   },
   "repository": {
     "type": "git",
@@ -23,8 +24,7 @@
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "mongoose": "^5.5.15",
-    "morgan": "^1.9.1",
-    "serviceworker-webpack-plugin": "^1.0.1"
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
@@ -33,6 +33,7 @@
     "babel-loader": "^8.0.6",
     "webpack": "^4.32.0",
     "webpack-cli": "^3.3.2",
-    "webpack-pwa-manifest": "^4.0.0"
+    "webpack-pwa-manifest": "^4.0.0",
+    "serviceworker-webpack-plugin": "^1.0.1"
   }
 }
