--- a/package.json
+++ b/package.json
@@ -7,19 +7,18 @@
     "webpack": "webpack",
     "prestart": "npm run webpack",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "heroku-postbuild": "webpack -p"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/coding-boot-camp/unit18hw.git"
+    "url": "git+https://github.com/jschrbr/budgets-pwa.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/coding-boot-camp/unit18hw/issues"
+    "url": "https://github.com/jschrbr/budgets-pwa/issues"
   },
-  "homepage": "https://github.com/coding-boot-camp/unit18hw#readme",
+  "homepage": "https://github.com/jschrbr/budgets-pwa",
   "dependencies": {
     "compression": "^1.7.4",
     "express": "^4.17.1",
