--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "compression": "^1.7.4",
     "express": "^4.17.1",
+    "heroku-ssl-redirect": "0.0.4",
     "mongoose": "^5.5.15",
     "morgan": "^1.9.1"
   },
