--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "webpack": "webpack",
+    "webpack": "npm run minify-css; webpack",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "heroku-postbuild": "webpack -p"
+    "heroku-postbuild": "npm run minify-css; webpack -p",
+    "minify-css": "./utils/minify-css"
   },
   "repository": {
     "type": "git",
@@ -31,9 +32,11 @@
     "@babel/preset-env": "^7.4.4",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
+    "mini-css-extract-plugin": "^0.9.0",
+    "minify": "^5.1.1",
+    "serviceworker-webpack-plugin": "^1.0.1",
     "webpack": "^4.32.0",
     "webpack-cli": "^3.3.2",
-    "webpack-pwa-manifest": "^4.0.0",
-    "serviceworker-webpack-plugin": "^1.0.1"
+    "webpack-pwa-manifest": "^4.0.0"
   }
 }
